--- a/HelloToast/app/src/main/res/values/strings.xml
+++ b/HelloToast/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Hello Toast</string>
+    <string name="toast_button_label">Toast</string>
+    <string name="count_button_label">Count</string>
+    <string name="current_count_textview">0</string>
+    <string name="toast_message">Hello Toast!</string>
 </resources>
